compiler/testData/diagnostics/tests/Constructors.jet
open class NoC
class NoC1 : <!SUPERTYPE_NOT_INITIALIZED_DEFAULT!>NoC<!>

class WithC0() : NoC()
open class WithC1() : <!SUPERTYPE_NOT_INITIALIZED_DEFAULT!>NoC<!>
class NoC2 : <!SUPERTYPE_NOT_INITIALIZED_DEFAULT!>WithC1<!>
class NoC3 : WithC1()
class WithC2() : <!SUPERTYPE_NOT_INITIALIZED_DEFAULT!>WithC1<!>

class <!CONFLICTING_OVERLOADS!>NoPC<!> {
  <!CONFLICTING_OVERLOADS!><!SECONDARY_CONSTRUCTOR_NO_INITIALIZER_LIST!>this<!>() {}<!>
}

class WithPC0() {
  this(a : Int) : this() {}
}

class WithPC1(a : Int) {
  <!SECONDARY_CONSTRUCTOR_NO_INITIALIZER_LIST!>this<!>() {}

  this(b : Long) : this("") {}

  this(s : String) : this(1) {}

  this(b : Char) : <!NONE_APPLICABLE!>this<!>("", 2) {}

  this(b : Byte) : this(""), <!MANY_CALLS_TO_THIS!>this(1)<!> {}
}


class Foo() : <!SUPERTYPE_NOT_INITIALIZED_DEFAULT, FINAL_SUPERTYPE!>WithPC0<!>, <!MANY_CLASSES_IN_SUPERTYPE_LIST, SYNTAX!>this<!>() {

}

class WithCPI_Dup(x : Int) {
  var <!MUST_BE_INITIALIZED_OR_BE_ABSTRACT!>x<!> : Int
}

class WithCPI(x : Int) {
  val a = 1
  val b : Int = $a
  val xy : Int = x
}

class NoCPI {
  val a = 1
  var ab = <!PROPERTY_INITIALIZER_NO_BACKING_FIELD!>1<!>
    get() = 1
    set(v) {}
}